ingress/01-hello-app-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-v1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-v1
  template:
    metadata:
      labels:
        app: hello-v1
    spec:
      containers:
      - name: hello
        image: gcr.io/google-samples/hello-app
        imagePullPolicy: IfNotPresent        
        ports:
        - containerPort: 8080
